[gd_scene load_steps=2 format=2]

[ext_resource path="res://canvas_layer.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="CenterContainer"]
visible = true
margin_left = 544.0
margin_top = 328.0
margin_right = 736.0
margin_bottom = 392.0
rect_min_size = Vector2( 192, 64 )
popup_exclusive = true
window_title = "You win!"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/WindowDialog/CenterContainer"]
margin_left = 16.0
margin_top = 6.0
margin_right = 176.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="CenterContainer/WindowDialog/CenterContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 14.0
text = "Congratulations, you win!"
align = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/WindowDialog/CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 18.0
margin_right = 160.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/WindowDialog/CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 160.0
margin_bottom = 52.0

[node name="VSeparator" type="VSeparator" parent="CenterContainer/WindowDialog/CenterContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 60.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="ButtonRestart" type="Button" parent="CenterContainer/WindowDialog/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 121.0
margin_bottom = 20.0
size_flags_horizontal = 8
text = "Restart"

[node name="ButtonExit" type="Button" parent="CenterContainer/WindowDialog/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 160.0
margin_bottom = 20.0
text = "Exit"
[connection signal="popup_hide" from="CenterContainer/WindowDialog" to="." method="_on_WindowDialog_popup_hide"]
[connection signal="button_up" from="CenterContainer/WindowDialog/CenterContainer/VBoxContainer/HBoxContainer/ButtonRestart" to="." method="_on_ButtonRestart_button_up"]
[connection signal="button_down" from="CenterContainer/WindowDialog/CenterContainer/VBoxContainer/HBoxContainer/ButtonExit" to="." method="_on_ButtonExit_button_down"]
